Removed photo, moved on the side

--- a/resume1_p1.html
+++ b/resume1_p1.html
@@ -9,9 +9,6 @@
 <body>
 <div class="resume">
     <div class="left">
-        <div class="profile">
-            <img src="media/Avartar.jpg">
-        </div>
         <div class="title">
             <h1>REID TULL</h1>
             <p>Computer Science student at UOttawa</p>
@@ -19,10 +16,11 @@
         <div class="about">
             <h1>About</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing 
-                elit. Nullam dignissim eleifend ante ac aliquet. 
-                Pellentesque viverra commodo felis et cursus. In 
-                elit nunc, scelerisque at fringilla vitae,
+                I am a student, studying to be a developer. My program makes 
+                it a requirement to be a fast learner, and I am. I have experience in 
+                fast paced environments and excellent communication skills. 
+                In the past I have done freelance work building well structured, expandable 
+                programs for managing data.
             </p>
         </div>
         <div class="contact">
@@ -32,13 +30,21 @@
             <p>reidtull.ca</p>
             <p>linkedin pf</p>
         </div>
-        <div class="skills">
+        <div class="contact">
             <h1>Skills</h1>
             <p>Fluent in Python, Java, C#, JS</p>
             <p>Worked with React, </p>
             <p>Video editing and production</p>
             <p>Python</p>
             <p>(5 skills)</p>
+        </div>
+        <div class="skills">
+            <h1>On The Side</h1>
+            <p>
+                I make nonsensical videos on my YouTube channel, which has over 3500 views across it. 
+                I have stared in multiple musical theater shows, and been caption of a robotic team.
+                I make a variety of creative things constantly
+            </p>
         </div>
     </div>
     <div class="right">
@@ -93,19 +99,6 @@
                 <div class="item">
                     <h2>My Website - reidtull.ca</h2>
                     <p>Small website to connect my various social media</p>
-                </div>
-            </li>
-        </div>
-        <div class="list">
-            <h1>On The Side</h1>
-            <li>
-                <div class="item">
-                    <p>
-                        I make nonsensical videos on my youtube channel, which has over 3500 views across it
-                    </p>
-                    <p>
-                        I have stared in multiple musical theater productions, and have produced, edited, and hosted a Holiday concert for my school.
-                    </p>
                 </div>
             </li>
         </div>
