--- a/resume1_p1.html
+++ b/resume1_p1.html
@@ -33,17 +33,17 @@
         <div class="contact">
             <h1>Skills</h1>
             <p>Fluent in Python, Java, C#, JS</p>
-            <p>Worked with React, </p>
+            <p>Worked with React and Next.js</p>
             <p>Video editing and production</p>
-            <p>Python</p>
-            <p>(5 skills)</p>
+            <p>Familiar with C++ and HTML</p>
+            <p>User of Git and the MS Suite</p>
         </div>
         <div class="skills">
-            <h1>On The Side</h1>
+            <h1>In My Spare Time</h1>
             <p>
                 I make nonsensical videos on my YouTube channel, which has over 3500 views across it. 
                 I have stared in multiple musical theater shows, and been caption of a robotic team.
-                I make a variety of creative things constantly
+                I strive to continue to make a variety of inventive new things
             </p>
         </div>
     </div>
@@ -54,7 +54,7 @@
                 <h1>2021-Now</h1>
                 <div class="item">
                     <h2>University of Ottawa</h2>
-                    <p>Set to achieve a BS with Major in Computer Science and Minor in Mathematics</p>
+                    <p>Bachelor of Science with Major in Computer Science and Minor in Mathematics</p>
                     <p>Current CGPA of 9.00</p>
                 </div>
             </li>
@@ -87,18 +87,36 @@
                         A Discord bot that interacts with the Discord and YouTube API to play music in group calls.
                         Manages downloads to avoid repeat downloads and achieve a small disk area
                     </p>
+                    <p>Code available on my Github, which can be found on my website</p>
                 </div>
             </li>
             <li>
                 <div class="item">
                     <h2>A Ways Down</h2>
-                    <p>Short Game made over 2 weeks as apart of a game jam with friends. Available on akaowen.itch.io/a-ways-down</p>
+                    <p>
+                        Short Game made over 2 weeks as apart of a game jam with friends.
+                        Made with Unity and C#
+                    </p>
+                    <p>Available on akaowen.itch.io/a-ways-down</p>
                 </div>
             </li>
             <li>
                 <div class="item">
-                    <h2>My Website - reidtull.ca</h2>
-                    <p>Small website to connect my various social media</p>
+                    <h2>My Website</h2>
+                    <p>
+                        Small website to connect my various social media. Made with React and Next.js,
+                        Currently hosted on Vercal. Plans to expand it to a larger, more eye-catching site.
+                    </p>
+                    <p>Live at reidtull.ca</p>
+                </div>
+            </li>
+            <li>
+                <div class="item">
+                    <h2>Production Work</h2>
+                    <p>
+                        Produced, organized, edited and hosted my school's Holiday Concert. After I
+                        was called on to produce and manage aspects of the school musical.
+                    </p>
                 </div>
             </li>
         </div>
