Well stuff is changing

--- a/resume1_p1.html
+++ b/resume1_p1.html
@@ -14,36 +14,35 @@
             <p>Computer Science student at UOttawa</p>
         </div>
         <div class="about">
-            <h1>About</h1>
             <p>
-                I am a student, studying to be a developer. My program makes 
-                it a requirement to be a fast learner, and I am. I have experience in 
-                fast paced environments and excellent communication skills. 
-                In the past I have done freelance work building well structured, expandable 
-                programs for managing data.
+                Student computer scientist, I have done freelance work and small side projects
+                for myself. I am a fast learner, as is required in my program, and have excellent
+                communication skills.
             </p>
         </div>
         <div class="contact">
             <p>705-987-5565</p>
-            <p>1041 Sunnyside Beach Rd, Sault Ste Marie, ON</p>
             <p>reid.a.tull@gmail.com</p>
             <p>reidtull.ca</p>
-            <p>linkedin pf</p>
-        </div>
-        <div class="contact">
-            <h1>Skills</h1>
-            <p>Fluent in Python, Java, C#, JS</p>
-            <p>Worked with React and Next.js</p>
-            <p>Video editing and production</p>
-            <p>Familiar with C++ and HTML</p>
-            <p>User of Git and the MS Suite</p>
+            <p>linkedin.com/in/reid-t-b930251ba</p>
         </div>
         <div class="skills">
+            <h1>Technologies</h1>
+            <p class="center">
+                Python - Excel - C# - JS<br>
+                React - Next.js - C++ - HTML<br>
+                CSS - Git - MS Suite - Java
+            </p>
+            <h1>Other</h1>
+            <p>- Video editing, video and audio production, cinematography</p>
+            <p>- Public speaking, presentation preparation and writing</p>
+        </div>
+        <div class="spare">
             <h1>In My Spare Time</h1>
             <p>
                 I make nonsensical videos on my YouTube channel, which has over 3500 views across it. 
-                I have stared in multiple musical theater shows, and been caption of a robotic team.
-                I strive to continue to make a variety of inventive new things
+                I have starred in multiple musical theater shows, and was captain of my robotics team.
+                I strive to continue to make a variety of inventive new things in various new forms.
             </p>
         </div>
     </div>
