Shifting margins, added bullet points

--- a/resume1_p1.html
+++ b/resume1_p1.html
@@ -34,6 +34,7 @@
                 CSS - Git - MS Suite - Java
             </p>
             <h1>Other</h1>
+            <p>- Trouble shooting and researching problems to find solutions</p>
             <p>- Video editing, video and audio production, cinematography</p>
             <p>- Public speaking, presentation preparation and writing</p>
         </div>
@@ -53,16 +54,16 @@
                 <h1>2021-Now</h1>
                 <div class="item">
                     <h2>University of Ottawa</h2>
-                    <p>Bachelor of Science with Major in Computer Science and Minor in Mathematics</p>
-                    <p>Current CGPA of 9.00</p>
+                    <p>- Bachelor of Science with Major in Computer Science and Minor in Mathematics</p>
+                    <p>- Current CGPA of 9.00</p>
                 </div>
             </li>
             <li>
                 <h1>2017-2021</h1>
                 <div class="item">
                     <h2>Korah C.V.S</h2>
-                    <p>Graduated with High Honours, Ontario Scholar, and the Theater Directors Award</p>
-                    <p>Subject certificates in Computer Science, Music and Computers, and Musical Theater</p>
+                    <p>- Graduated with High Honours, Ontario Scholar, and the Theater Directors Award</p>
+                    <p>- Subject certificates in Computer Science, Music and Computers, and Musical Theater</p>
                 </div>
             </li>
         </div>
@@ -72,8 +73,8 @@
                 <h1>2018-2020</h1>
                 <div class="item">
                     <h2>GNR Clinic, Sault Ste. Marie</h2>
-                    <p>Booked and handled appointments, Roomed patients and took basic medical measurements</p>
-                    <p>Managed Office, organized files, and provided help assembling and installing medical equipment</p>
+                    <p>- Booked and handled appointments, Roomed patients and took basic medical measurements</p>
+                    <p>- Managed Office, organized files, and provided help assembling and installing medical equipment</p>
                 </div>
             </li>
         </div>
@@ -81,41 +82,45 @@
             <h1>Projects</h1>
             <li>
                 <div class="item">
-                    <h2>Better Bot</h2>
-                    <p>
-                        A Discord bot that interacts with the Discord and YouTube API to play music in group calls.
-                        Manages downloads to avoid repeat downloads and achieve a small disk area
-                    </p>
-                    <p>Code available on my Github, which can be found on my website</p>
+                    <div class="project">
+                        <h2>Better Bot</h2>
+                        <p>github.com/akaowen7/better_bot</p>
+                    </div>
+                    <p>- A Discord bot written in JS, then re-written in Python, that interacts with the Discord and YouTube API to play music in group calls.</p>
+                    <p>- Manages downloads efficiently to avoid repeat downloads and to use as little disk space as possible</p>
+                    <p>- Responds to discord emotes, creating a simple user interface</p>
                 </div>
             </li>
             <li>
                 <div class="item">
-                    <h2>A Ways Down</h2>
-                    <p>
-                        Short Game made over 2 weeks as apart of a game jam with friends.
-                        Made with Unity and C#
-                    </p>
-                    <p>Available on akaowen.itch.io/a-ways-down</p>
+                    <div class="project">
+                        <h2>A Ways Down</h2>
+                        <p>akaowen.itch.io/a-ways-down</p>
+                    </div>
+                    <p>- Short 2D platformer game made over 2 weeks as apart of a game jam with friends.</p>
+                    <p>- Made with Unity and C#, built on an object orientated, expandable codebase</p>
                 </div>
             </li>
             <li>
                 <div class="item">
-                    <h2>My Website</h2>
-                    <p>
-                        Small website to connect my various social media. Made with React and Next.js,
-                        Currently hosted on Vercal. Plans to expand it to a larger, more eye-catching site.
-                    </p>
-                    <p>Live at reidtull.ca</p>
+                    <div class="project">
+                        <h2>My Website</h2>
+                        <p>reidtull.ca</p>
+                    </div>
+                    <p>- Small website to connect my various social media. Made with React and Next.js, hosted on Vercal.</p>
+                    <p>- Integrated Framer-Motion to create more lively buttons, and a reactive design</p>
                 </div>
             </li>
             <li>
                 <div class="item">
-                    <h2>Production Work</h2>
-                    <p>
-                        Produced, organized, edited and hosted my school's Holiday Concert. After I
-                        was called on to produce and manage aspects of the school musical.
-                    </p>
+                    <div class="project">
+                        <h2>Production Work</h2>
+                        <p>Korah C.V.S</p>
+                    </div>
+                    <p>- Produced, organized, edited and hosted my school's Holiday Concert.</p>
+                    <p>- Produced and managed aspects of the school's musical</p>
+                    <p>- Created recording setup and recording software guides for people filming parts at-home</p>
+                    <p>- Tracked equipment usage and helped with tech support</p>
                 </div>
             </li>
         </div>
