--- a/resume1_p1.html
+++ b/resume1_p1.html
@@ -4,6 +4,7 @@
 <head>
     <title>Resume</title>
     <link rel="stylesheet" href="resume1_style.css">
+    <script src="https://kit.fontawesome.com/fe0142f25d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,28 +22,44 @@
             </p>
         </div>
         <div class="contact">
-            <p>705-987-5565</p>
-            <p>reid.a.tull@gmail.com</p>
-            <p>reidtull.ca</p>
-            <p>linkedin.com/in/reid-t-b930251ba</p>
+            <div class="info">
+                <i class="fa-solid fa-phone"></i>
+                <p>705-987-5565</p>
+            </div>
+            <div class="info">
+                <i class="fa-solid fa-paper-plane"></i>
+                <p>reid.a.tull@gmail.com</p>
+            </div>
+            <div class="info">
+                <i class="fa-solid fa-globe"></i>
+                <p>reidtull.ca</p>
+            </div>
+            <div class="info">
+                <i class="fa-brands fa-linkedin"></i>
+                <p>linkedin.com/in/reid-t-b930251ba</p>
+            </div>
+
         </div>
         <div class="skills">
             <h1>Technologies</h1>
             <p class="center">
                 Python - Excel - C# - JS<br>
                 React - Next.js - C++ - HTML<br>
-                CSS - Git - MS Suite - Java
+                CSS - Git - MS Suite - VS Code<br>
+                Java - Premiere - Photoshop
             </p>
-            <h1>Other</h1>
+            <h1>Skills</h1>
             <p>- Trouble shooting and researching problems to find solutions</p>
             <p>- Video editing, video and audio production, cinematography</p>
-            <p>- Public speaking, presentation preparation and writing</p>
+            <p>- Public speaking, presentation preparation, writing</p>
+            <p>- Organization of people and events, leadership</p>
         </div>
         <div class="spare">
             <h1>In My Spare Time</h1>
             <p>
                 I make nonsensical videos on my YouTube channel, which has over 3500 views across it. 
-                I have starred in multiple musical theater shows, and was captain of my robotics team.
+                I have starred in multiple musical theater shows, and preformed in various concerts.
+                I am musically inclined, and have made a variety of original compositions.
                 I strive to continue to make a variety of inventive new things in various new forms.
             </p>
         </div>
@@ -62,8 +79,10 @@
                 <h1>2017-2021</h1>
                 <div class="item">
                     <h2>Korah C.V.S</h2>
-                    <p>- Graduated with High Honours, Ontario Scholar, and the Theater Directors Award</p>
+                    <p>- Graduated with High Honours, Ontario Scholar Award, and the Theater Directors Award</p>
                     <p>- Subject certificates in Computer Science, Music and Computers, and Musical Theater</p>
+                    <p>- Eric Namespetra Scholarship</p>
+                    <p>- Captain of the VRC robotics team, Musical Theater Lead</p>
                 </div>
             </li>
         </div>
