Made dad changes

--- a/resume1_p1.html
+++ b/resume1_p1.html
@@ -60,7 +60,7 @@
                 I make nonsensical videos on my YouTube channel, which has over 3500 views across it. 
                 I have starred in multiple musical theater shows, and preformed in various concerts.
                 I am musically inclined, and have made a variety of original compositions.
-                I strive to continue to make a variety of inventive new things in various new forms.
+                I strive to continue to make a variety of new creative things
             </p>
         </div>
     </div>
@@ -71,18 +71,19 @@
                 <h1>2021-Now</h1>
                 <div class="item">
                     <h2>University of Ottawa</h2>
-                    <p>- Bachelor of Science with Major in Computer Science and Minor in Mathematics</p>
+                    <p>- Honours Bachelor of Science with Major in Computer Science and Minor in Mathematics</p>
                     <p>- Current CGPA of 9.00</p>
                 </div>
             </li>
             <li>
                 <h1>2017-2021</h1>
                 <div class="item">
-                    <h2>Korah C.V.S</h2>
+                    <h2>Korah C.V.S, Sault Ste. Marie</h2>
                     <p>- Graduated with High Honours, Ontario Scholar Award, and the Theater Directors Award</p>
                     <p>- Subject certificates in Computer Science, Music and Computers, and Musical Theater</p>
                     <p>- Eric Namespetra Scholarship</p>
-                    <p>- Captain of the VRC robotics team, Musical Theater Lead</p>
+                    <p>- Captain of the VRC robotics team</p>
+                    <p>- Musical Theater lead</p>
                 </div>
             </li>
         </div>
@@ -91,9 +92,9 @@
             <li>
                 <h1>2018-2020</h1>
                 <div class="item">
-                    <h2>GNR Clinic, Sault Ste. Marie</h2>
-                    <p>- Booked and handled appointments, Roomed patients and took basic medical measurements</p>
-                    <p>- Managed Office, organized files, and provided help assembling and installing medical equipment</p>
+                    <h2>GNR Medical Clinic, Sault Ste. Marie</h2>
+                    <p>- Booked and handled appointments, roomed patients and took basic medical measurements</p>
+                    <p>- Managed office, organized files, and provided help assembling and installing medical equipment</p>
                 </div>
             </li>
         </div>
@@ -116,7 +117,7 @@
                         <h2>A Ways Down</h2>
                         <p>akaowen.itch.io/a-ways-down</p>
                     </div>
-                    <p>- Short 2D platformer game made over 2 weeks as apart of a game jam with friends.</p>
+                    <p>- Short 2D platformer game made over 2 weeks as a part of a game jam with friends.</p>
                     <p>- Made with Unity and C#, built on an object orientated, expandable codebase</p>
                 </div>
             </li>
@@ -126,8 +127,9 @@
                         <h2>My Website</h2>
                         <p>reidtull.ca</p>
                     </div>
-                    <p>- Small website to connect my various social media. Made with React and Next.js, hosted on Vercal.</p>
-                    <p>- Integrated Framer-Motion to create more lively buttons, and a reactive design</p>
+                    <p>- Small website to connect my various social media accounts</p>
+                    <p>- Made with React and Next.js, hosted on Vercal</p>
+                    <p>- Integrated Framer-Motion to create lively buttons and a more reactive design</p>
                 </div>
             </li>
             <li>
@@ -136,10 +138,10 @@
                         <h2>Production Work</h2>
                         <p>Korah C.V.S</p>
                     </div>
-                    <p>- Produced, organized, edited and hosted my school's Holiday Concert.</p>
-                    <p>- Produced and managed aspects of the school's musical</p>
+                    <p>- Produced, organized, edited and hosted my school's Holiday Concert video.</p>
+                    <p>- Video production and staging of the school's Musical Production</p>
                     <p>- Created recording setup and recording software guides for people filming parts at-home</p>
-                    <p>- Tracked equipment usage and helped with tech support</p>
+                    <p>- Tracked equipment usage, took on tech support role</p>
                 </div>
             </li>
         </div>
