New Linkdin url

--- a/resume1_p1.html
+++ b/resume1_p1.html
@@ -36,7 +36,7 @@
             </div>
             <div class="info">
                 <i class="fa-brands fa-linkedin"></i>
-                <p>linkedin.com/in/reid-t-b930251ba</p>
+                <p>linkedin.com/in/reid-tull/</p>
             </div>
 
         </div>
